--- a/imageGrid.css
+++ b/imageGrid.css
@@ -1,3 +1,11 @@
 body {
     padding-top: 70px;
 }
+
+.navbar-inverse {
+    background-color: #2c3e50;
+}
+
+.jumbotron {
+    background-color: #ecf0f1;
+}
