--- a/imageGrid.css
+++ b/imageGrid.css
@@ -7,5 +7,14 @@ body {
 }
 
 .jumbotron {
+    color: #2c3e50;
     background-color: #ecf0f1;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
 }
